--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamburger Menu</title>
 </head>
+
 <body>
-    
+    <div class="grid-container">
+        <div class="grid-boxes grid-1">
+            <input type="checkbox" id="checkbox1" class="checkbox-1 hidden">
+
+            <label for="">
+                <div class="hamburger hamburger1">
+                    <div class="bar bar1"></div>
+                    <div class="bar bar2"></div>
+                    <div class="bar bar3"></div>
+                </div>
+            </label>
+        </div>
+    </div>
 </body>
+
 </html>
