--- a/index.html
+++ b/index.html
@@ -5,22 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Hamburger Menu</title>
 </head>
 
 <body>
-    <div class="grid-container">
-        <div class="grid-boxes grid-1">
-            <input type="checkbox" id="checkbox1" class="checkbox-1 hidden">
+    <div class="hamburger-menu">
+        <input type="checkbox">
 
-            <label for="">
-                <div class="hamburger hamburger1">
-                    <div class="bar bar1"></div>
-                    <div class="bar bar2"></div>
-                    <div class="bar bar3"></div>
-                </div>
-            </label>
+        <div class="hamburger-lines">
+            <span class="line line1"></span>
+            <span class="line line2"></span>
+            <span class="line line3"></span>
         </div>
+
+        <ul class="menu-items">
+            <li>Home</li>
+            <li>Log in</li>
+            <li>Register</li>
+            <li>About Us</li>
+            <li>Contact Us</li>
+        </ul>
     </div>
 </body>
 
